<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="452dp"
        android:background="@drawable/app_logo250a"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close"
                android:tint="@color/grey_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/app_logo250" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:fontFamily="@font/myfont"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:fontFamily="@font/myfont"
                    android:text="@string/About_Version_Number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/green_100"
                    android:textSize="13sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_large"
                android:autoLink="web"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="@string/About_Text"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/White"
                android:textSize="14sp" />

        </LinearLayout>


        <Button
            android:id="@+id/bt_rate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rateUs"
            android:textColor="@color/red_600"
            android:textSize="14sp"
            app:fontFamily="@font/myfont" />

        <Button
            android:id="@+id/bt_privacy"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_policy"
            android:textColor="@color/red_600"
            android:textSize="14sp"
            app:fontFamily="@font/myfont" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/bt_ok"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/myfont"
                android:text="@string/ok"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>