<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_logo250a"
    tools:context=".activities.QuizResultActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/actionBarSize"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/resultImg"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:padding="17dp"
            android:src="@drawable/results_icon" />

        <TextView
            android:id="@+id/game_difficultyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/myfont"
            android:text="@string/game_difficulty"
            android:textColor="@color/White"
            android:textSize="20sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xlarge"
            android:layout_weight="0.005" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:src="@drawable/ic_check_24dp" />

            <TextView
                android:id="@+id/right_answers_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="@string/Result_RightAnswers"
                android:textColor="@color/White"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/White"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.01"
            android:background="@color/White" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/CupImg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:src="@drawable/best_score_icon" />

            <TextView
                android:id="@+id/best_score_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="@string/Result_BestScore"
                android:textColor="@color/White"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_best_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:fontFamily="@font/myfont"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/White"
                android:textSize="17sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_large"
            android:layout_weight="0.01" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.02"
            android:background="@drawable/button"
            android:fontFamily="@font/myfont"
            android:onClick="PlayAgainClick"
            android:padding="5dp"
            android:text="@string/Result_PlayAgain"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium"
            android:layout_weight="0.01" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.02"
            android:background="@drawable/button"
            android:fontFamily="@font/myfont"
            android:onClick="BackClick"
            android:padding="5dp"
            android:text="@string/Result_Back"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium"
            android:layout_weight="0.25" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id"></com.google.android.gms.ads.AdView>

</RelativeLayout>